[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[nosetests]
tests=my_tests

#[bdist_wheel]
#universal=1

[build_sphinx]
project = GHIA
version = 1.2
release = 1.2.0
source-dir = docs